--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./style.css" />
-    <title>React Tutorial</title>
+    <title>わんこをさがそう！</title>
   </head>
   <body>
     <div id="content"></div>
