よくわかんないけど死んだ

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>わんこをさがそう！</title>
+    <link rel=”icon” href=“/inu.ico”>
   </head>
   <body>
     <div id="content"></div>
