ファビコンとたたかう

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>わんこをさがそう！</title>
-    <link rel=”icon” href=“inu.ico”>
+    <link rel="icon" href="images\inu.PNG" />
   </head>
   <body>
     <div id="content"></div>
